tests/snapshots/report_snapshots__single_markdown_rich.snap
---
source: tests/report_snapshots.rs
expression: render_single_markdown(&rich_report().to_view(true))
---
# Soroban Upgrade Safety Report

## Status: ❌ FAILED (Critical breaking changes detected)

### Summary Table

| Finding Severity | Count |
| :--- | :--- |
| **Critical** | 2 |
| **Warning** | 0 |
| **Info** | 1 |
| **Suppressed** | 1 |

**Recommended SemVer Bump**: `major`

---

### Environment

- 🔵 Protocol version changed from 20 to 21
  - ↳ guidance: Verify that the target network supports the new protocol version.

### Function Signature Changed

- 🔕 **[SUPPRESSED]** Function 'initialize' signature changed
  - ↳ reason: Planned re-init for the v2 migration.
  - ↳ guidance: Update call sites, SDKs, and tests to match the new parameter structure.

### Struct Field Removed

- 🔴 Field 'threshold' removed from struct 'ConfigData'
  - ↳ guidance: Restore the field or perform a state migration.

### ⚠️ Action Required

- The new contract version modifies existing storage layouts or function interfaces.
- Deploying this upgrade will result in orphaned data, serialization panics, or broken integrations.
