tests/snapshots/report_snapshots__single_text_provenance.snap
---
source: tests/report_snapshots.rs
expression: render_single_text(&provenance_report().to_view(false))
---

========================================
    SOROBAN UPGRADE SAFETY REPORT
========================================
Status: ✅ PASSED (No breaking changes detected)
Critical: 0
Warnings: 0
Info:     0
Recommended Bump: patch
Baseline Source: RPC
Verified Code Hash: deadbeefcafef00d1122334455667788990011223344556677889900aabbccddee
----------------------------------------

No relevant changes detected. The upgrade is identical in its exports and types.
